# SetSail

./: CMakeLists.txt  README.md  SetSail.cmake  launcher.cpp.in  resource.aps  sha.cpp  sha.h
